-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.0
-
None
-
92d6d1c9
Device: 5800
Firmware version: V 40.0.001 RnD
Release: f16c501d
Platform: ARMV5 UDEB
Compiler used: ARM/Thumb C/C++ Compiler, RVCT2.2 [Build 686]
Application: Mediaplayer demo
Launched from: Application launcher
Problem description:
1. Open video clip, with device in portrait orientation
2. Enable full screen
3. Disable full screen
The controls are right at the bottom of the screen, almost completely covered by the softkeys. Switching orientation to landscape and then back to portrait corrects the orientation.
This problem does not occur when exiting full-screen mode in landscape orientation.
- is replaced by
-
QTBUG-10149 QMediaplayer demo layout is wrong after fullscreen video playback ends in portrait mode
-
- Closed
-